# src/system_router.py
@@ -4,12 +4,14 @@ from pydantic import BaseModel
 import asyncio
 import os
 import platform
+import dotenv
 from fastapi import APIRouter, HTTPException
 from fastapi.responses import StreamingResponse
 
 router = APIRouter()
-
-current_directory = os.curdir
+dotenv.load_dotenv()
+current_directory = dotenv.get_key(".env", "CURRENT_DIR") or os.curdir
+dotenv.set_key(".env", "CURRENT_DIR", current_directory)
 
 class CDRequest(BaseModel):
     directory: str
@@ -27,25 +29,24 @@ class KeyboardAction(BaseModel):
 
 @router.post("/set-current-directory")
 async def change_current_directory(request: CDRequest):
-    global current_directory
-    
+    '''Changes the current working directory'''    
     if not os.path.exists(request.directory):
         raise HTTPException(status_code=400, detail="Invalid directory path")
+    dotenv.set_key(".env", "CURRENT_DIR", request.directory)
+    return {"message": f"Current directory changed to {request.directory}"}
 
-    current_directory = request.directory
-    return {"message": f"Current directory changed to {current_directory}"}
-
-@router.get("/get-current-directory")
+@router.post("/get-current-directory")
 async def return_current_directory():
-    global current_directory
-    return {"message": f"The current working directory is {current_directory}"}
+    '''Returns the current working directory'''
+    cd = dotenv.get_key(".env", "CURRENT_DIR")
+    return {"message": f"The current working directory is {cd}"}
 
 @router.post("/run-command") 
 async def run_terminal_command(request: CommandRequest):
     '''Runs a terminal command in the current directory'''
-    global current_directory
+    cd = dotenv.get_key(".env", "CURRENT_DIR")
     try:
-        command = f"cd {current_directory} && {request.command}"
+        command = f"cd {cd} && {request.command}"
         result = subprocess.run(command, shell=True, capture_output=True, text=True)
         return {"input": request.command, "output": result.stdout, "error": result.stderr}
     except Exception as e:
